--- a/src/scss/DialogueBubble.scss
+++ b/src/scss/DialogueBubble.scss
@@ -43,8 +43,9 @@
 
     @media screen and (max-width: g.$small_screen_width) {
         position: relative;
-        flex-grow: 1;
         top: 0;
+        right: g.$mobile_secretary_scene_spacing;
+        width: calc(100vw - g.$secretary_scene_mobile_height - g.$mobile_secretary_scene_spacing * 3);
 
         & &__switch {
             display: none;
@@ -56,6 +57,8 @@
             justify-content: safe center;
             height: $mobile_height;
             min-height: $mobile_height;
+            width: 100%;
+            left: 0;
             overflow-y: auto;
             scrollbar-color: transparent transparent !important;
             scrollbar-width: none !important;
@@ -77,7 +80,6 @@
                 color: g.$font_white_color;
                 display: inline-block;
                 font-size: $font_size;
-                // user-select: none;
             }
         }
     }
